working without image clicking

--- a/templates/template.html
+++ b/templates/template.html
@@ -13,14 +13,15 @@
 </head>
 <body>
     <img src="static/images/{{name}}" >
-	<form action="/action_page.php">
-  <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-  <label for="vehicle1"> I have a bike</label><br>
-  <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-  <label for="vehicle2"> I have a car</label><br>
-  <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-  <label for="vehicle3"> I have a boat</label><br><br>
+	<form action="/noteFilePaths">
+  <input type="checkbox" id="vehicle1" name="category1" value="Considerable">
+  <label for="vehicle1">Considerable</label><br>
+  <input type="checkbox" id="vehicle2" name="category2" value="BeautyExpress">
+  <label for="vehicle2"> BeautyExpress</label><br>
+  <input type="checkbox" id="vehicle3" name="category3" value="CaughtInAct">
+  <label for="vehicle3"> CaughtInAct</label><br><br>
   <input type="submit" value="Submit">
+   <input type="hidden" id="custId" name="imgfilename" value="{{name}}">
 </form>
 
 </body>
