checkbox size increased

--- a/templates/template.html
+++ b/templates/template.html
@@ -6,6 +6,16 @@
 	  max-width: 100%;
 	  height: auto;
 	}
+	label,input[type=checkbox]
+	{
+	  /* Double-sized Checkboxes */
+	  -ms-transform: scale(2); /* IE */
+	  -moz-transform: scale(2); /* FF */
+	  -webkit-transform: scale(2); /* Safari and Chrome */
+	  -o-transform: scale(2); /* Opera */
+	   font-size: 15px;
+	   margin-top: 10px;
+	}
 	</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
